<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.backintyne.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_events"
            app:destination="@id/navigation_events" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_info"
            app:destination="@id/navigation_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.backintyne.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_info"
            app:destination="@id/navigation_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.backintyne.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_info"
            app:destination="@id/navigation_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.backintyne.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.backintyne.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.backintyne.ui.info.InfoFragment"
        android:label="@string/title_info" />


</navigation>